<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="@dimen/exoplayer_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/exoplayer_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/recipe_step_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/playerView"
        android:padding="@dimen/recipe_text_padding"
        style="@style/StepTheme"
        />

    <Button
        android:id="@+id/previous_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_step_button_text"
        app:layout_constraintTop_toBottomOf="@id/recipe_step_text"
        app:layout_constraintLeft_toRightOf="@id/playerView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/recipe_button_margin_top_horizontal"
        />

    <Button
        android:id="@+id/next_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step_button_text"
        app:layout_constraintTop_toBottomOf="@id/previous_step_button"
        app:layout_constraintLeft_toRightOf="@id/playerView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/recipe_button_margin_top_horizontal"
        />

</android.support.constraint.ConstraintLayout>